change container to fluid container and limit image div width to 80%

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div>
             <h1 class="display-4">Images</h1>
         </div>
-        <div class="container">
+        <div class="container-fluid">
             <div class="main" id="images"></div>
             <div class="controls">
                 <button id="refresh">
