--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="container-fluid">
             <div class="main" id="images"></div>
             <div class="controls">
-                <button id="refresh">
+                <button class="btn btn-primary" id="refresh">
                     <i class="fas fa-sync"></i>Refresh
                 </button>
             </div>
