--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
 
         <link rel="stylesheet" href="index.css" />
@@ -51,9 +48,7 @@
         <div class="container-fluid">
             <div class="main" id="images"></div>
             <div class="controls">
-                <button class="btn btn-primary" id="refresh">
-                    <i class="fas fa-sync"></i>Refresh
-                </button>
+                <button class="btn btn-primary" id="refresh"><i class="fas fa-sync"></i>Refresh</button>
             </div>
         </div>
     </body>
