--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
 
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="css/index.css" />
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="scripts/index.js"></script>
+        <script src="js/index.js"></script>
 
         <!-- bootstrap css cdn -->
         <link
