--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         />
     </head>
     <body>
-        <div>
+        <div class="sticky-top">
             <h1 class="display-4">Images</h1>
             <div class="container slideshow"></div>
             <div class="controls">
