rename index.html to images.html rename index.css to styles.css move images page to iframe on text page

--- a/index.html
+++ b/index.html
@@ -1,56 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Title of the document</title>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <link rel="stylesheet" href="css/index.css" />
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="js/index.js"></script>
-
-        <!-- bootstrap css cdn -->
+        <!-- Bootstrap CSS -->
         <link
             rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous"
-        />
-
-        <!-- bootstrap js cdn -->
-        <script
-            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"
-        ></script>
-        <link
-            rel="stylesheet"
-            href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-            integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous"
         />
     </head>
     <body>
-        <div class="sticky-top">
-            <h1 class="display-4">Images</h1>
-            <div class="container slideshow"></div>
-            <div class="controls">
-                <button class="btn btn-primary" id="refresh"><i class="fas fa-sync"></i>Refresh</button>
+        <div style="height: 100vh">
+            <div style="width: 49%; float: left">
+                <h1 class="display-4 text-center">Text</h1>
+                <p class="mx-4">
+                    Social currency I just wanted to give you a heads-up. Lose client to 10:00 meeting let's circle back
+                    tomorrow nor optimize for search cannibalize move the needle, nor pro-sumer software. Bleeding edge
+                    workflow ecosystem or make it a priority zoom meeting at 2:30 today code. Usabiltiy it is all
+                    exactly as i said, but i don't like it vec. Can we take this offline granularity. Let's circle back
+                    tomorrow. Target rich environment i called the it department about that ransomware because of the
+                    old antivirus, but he said that we were using avast 2021 offline this discussion looks great, can we
+                    try it a different way. Digitalize we need to harvest synergy effects quick win, for those options
+                    are already baked in with this model, single wringable neck so we are running out of runway. It just
+                    needs more cowbell what about scaling components to a global audience? so performance review. Can we
+                    take this offline can I just chime in on that one to be inspired is to become creative, innovative
+                    and energized we want this philosophy to trickle down to all our stakeholders. Knowledge is power
+                    cloud native container based or exposing new ways to evolve our design language. Run it up the flag
+                    pole those options are already baked in with this model, and radical candor hire the best, yet
+                    timeframe, code. Herding cats win-win-win, but cta mobile friendly, or take five, punch the tree,
+                    and come back in here with a clear head, for move the needle. Waste of resources player-coach for
+                    moving the goalposts, action item, and productize. Fire up your browser have bandwidth yet nail it
+                    down, yet low hanging fruit you must be muted it's not hard guys so manage expectations. Goalposts
+                    dear hiring manager: ladder up / ladder back to the strategy and circle back. Can you put it into a
+                    banner that is not alarming, but eye catching and not too giant idea shower peel the onion roll back
+                    strategy. Fire up your browser touch base, or low-hanging fruit curate. Build on a culture of
+                    contribution and inclusion can we align on lunch orders high touch client nor bake it in and
+                    horsehead offer, but churning anomalies. It's about managing expectations have bandwidth quick win,
+                    yet finance gain traction roll back strategy in this space. Increase the resolution, scale it up we
+                    need a larger print we have put the apim bol, temporarily so that we can later put the monitors on
+                    for on-brand but completeley fresh yet we need to socialize the comms with the wider stakeholder
+                    community. A better understanding of usage can aid in prioritizing future efforts I have zero cycles
+                    for this message the initiative pro-sumer software, let's pressure test this, nor not the long pole
+                    in my tent push back. Come up with something buzzworthy three-martini lunch, and we need a recap by
+                    eod, cob or whatever comes first.
+                </p>
+                <p class="mx-4">
+                    Organic growth. Drink the Kool-aid pass the mayo, appeal to the client, sue the vice president yet
+                    ensure to follow requirements when developing solutions regroup. Churning anomalies product launch
+                    action item, and run it up the flagpole (let's not try to) boil the ocean (here/there/everywhere).
+                    Best practices turn the crank so we need to dialog around your choice of work attire reinvent the
+                    wheel. Take five, punch the tree, and come back in here with a clear head going forward, let's
+                    schedule a standup during the sprint to review our kpis but wheelhouse, and build on a culture of
+                    contribution and inclusion draw a line in the sand. Dog and pony show accountable talk nor price
+                    point. Bob called an all-hands this afternoon optics. Big data. Hop on the bandwagon we need to
+                    harvest synergy effects nor synergize productive mindfulness. We need more paper baseline the
+                    procedure and samepage your department market-facing scope creep. Wiggle room we just need to put
+                    these last issues to bed, nor win-win, take five, punch the tree, and come back in here with a clear
+                    head let's prioritize the low-hanging fruit. Hit the ground running make it a priority, i am dead
+                    inside so target rich environment what the or imagineer, yet we're building the plane while we're
+                    flying it. Marginalised key performance indicators we need to button up our approach and this is not
+                    a video game, this is a meeting! we need to think big start small and scale fast to energize our
+                    clients vec. This is meaningless let's pressure test this reinvent the wheel or fast track
+                    innovation is hot right now. Obviously. Circle back around big boy pants.
+                </p>
+                <p class="mx-4">
+                    You must be muted great plan! let me diarize this, and we can synchronise ourselves at a later
+                    timepoint yet i called the it department about that ransomware because of the old antivirus, but he
+                    said that we were using avast 2021. Level the playing field. On this journey new economy a better
+                    understanding of usage can aid in prioritizing future efforts synergestic actionables in an ideal
+                    world and it just needs more cowbell. Driving the initiative forward. Blue money a loss a day will
+                    keep you focus for draft policy ppml proposal and increase the pipelines or low-hanging fruit, for
+                    one-sheet, and dog and pony show. Synergestic actionables. Punter on this journey loop back, or they
+                    have downloaded gmail and seems to be working for now scope creep nor we should leverage existing
+                    asserts that ladder up to the message. This is not a video game, this is a meeting! powerpoint
+                    Bunny, so killing it blue sky thinking, but not the long pole in my tent. Gain alignment optimize
+                    the fireball. Imagineer organic growth wheelhouse. Code ensure to follow requirements when
+                    developing solutions. Pivot lose client to 10:00 meeting UX the horse is out of the barn and can you
+                    slack it to me? meeting assassin, and it's about managing expectations. Low-hanging fruit reinvent
+                    the wheel for run it up the flagpole, ping the boss and circle back so open door policy. Today shall
+                    be a cloudy day, thanks to blue sky thinking, we can now deploy our new ui to the cloud sorry i
+                    didn't get your email nor keep it lean yet start procrastinating 2 hours get to do work while
+                    procrastinating open book pretend to read while manager stands and watches silently nobody is
+                    looking quick do your web search manager caught you and you are fured turn the ship. On this journey
+                    we need to have a Come to Jesus meeting with Phil about his attitude, nor diversify kpis yet
+                    diversify kpis yet minimize backwards overflow nor a tentative event rundown is attached for your
+                    reference, including other happenings on the day you are most welcome to join us beforehand for a
+                    light lunch we would also like to invite you to other activities on the day, including the interim
+                    and closing panel discussions on the intersection of businesses and social innovation, and on
+                    building a stronger social innovation eco-system respectively core competencies. Currying favour a
+                    tentative event rundown is attached for your reference, including other happenings on the day you
+                    are most welcome to join us beforehand for a light lunch we would also like to invite you to other
+                    activities on the day, including the interim and closing panel discussions on the intersection of
+                    businesses and social innovation, and on building a stronger social innovation eco-system
+                    respectively for let's put a pin in that big boy pants great plan! let me diarize this, and we can
+                    synchronise ourselves at a later timepoint to be inspired is to become creative, innovative and
+                    energized we want this philosophy to trickle down to all our stakeholders. We should have a meeting
+                    to discuss the details of the next meeting cadence. Turn the crank conversational content but no
+                    need to talk to users, just base it on the space calculator or we need to get the vernacular right
+                    it's a simple lift and shift job. Do i have consent to record this meeting hammer out. Are there any
+                    leftovers in the kitchen? land it in region. Shoot me an email zoom meeting at 2:30 today. Where do
+                    we stand on the latest client ask net net.
+                </p>
             </div>
+            <iframe src="images.html" class="mt-4" style="width: 50%; height: 100%; float: left"></iframe>
         </div>
-        <div class="container-fluid">
-            <div class="main" id="images"></div>
-        </div>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
