wrap text around iframe

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     yet finance gain traction roll back strategy in this space. Increase the resolution, scale it up we
                     need a larger print we have put the apim bol, temporarily so that we can later put the monitors on
                     for on-brand but completeley fresh yet we need to socialize the comms with the wider stakeholder
-                    community. A better understanding of usage can aid in prioritizing future efforts I have zero cycles
-                    for this message the initiative pro-sumer software, let's pressure test this, nor not the long pole
-                    in my tent push back. Come up with something buzzworthy three-martini lunch, and we need a recap by
-                    eod, cob or whatever comes first.
+                    community.
                 </p>
+            </div>
+            <iframe src="images.html" class="my-4" style="width: 50%; height: 100%; float: left"></iframe>
+            <div class="pb-4">
                 <p class="mx-4">
                     Organic growth. Drink the Kool-aid pass the mayo, appeal to the client, sue the vice president yet
                     ensure to follow requirements when developing solutions regroup. Churning anomalies product launch
@@ -107,7 +107,6 @@
                     we stand on the latest client ask net net.
                 </p>
             </div>
-            <iframe src="images.html" class="mt-4" style="width: 50%; height: 100%; float: left"></iframe>
         </div>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
