--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
                 needs more cowbell what about scaling components to a global audience? so performance review. Can we
                 take this offline can I just chime in on that one to be inspired is to become creative, innovative
                 and energized we want this philosophy to trickle down to all our stakeholders. Knowledge is power
-                cloud native container based or exposing new ways to evolve our design language. Run it up the flag
-                pole those options are already baked in with this model, and radical candor hire the best, yet
-                timeframe, code. Herding cats win-win-win, but cta mobile friendly, or take five, punch the tree,
-                and come back in here with a clear head, for move the needle. Waste of resources player-coach for
+                cloud native container based or exposing new ways to evolve our design language.
+            </p>
+            <p class="mx-4">
+                Run it up the flag pole those options are already baked in with this model, and radical candor hire the
+                best, yet timeframe, code. Herding cats win-win-win, but cta mobile friendly, or take five, punch the
+                tree, and come back in here with a clear head, for move the needle. Waste of resources player-coach for
                 moving the goalposts, action item, and productize. Fire up your browser have bandwidth yet nail it
-                down, yet low hanging fruit you must be muted it's not hard guys so manage expectations. Goalposts
-                dear hiring manager: ladder up / ladder back to the strategy and circle back. Can you put it into a
+                down, yet low hanging fruit you must be muted it's not hard guys so manage expectations. Goalposts dear
+                hiring manager: ladder up / ladder back to the strategy and circle back. Can you put it into a
                 banner that is not alarming, but eye catching and not too giant idea shower peel the onion roll back
                 strategy. Fire up your browser touch base, or low-hanging fruit curate. Build on a culture of
-                contribution and inclusion can we align on lunch orders high touch client nor bake it in and
-                horsehead offer, but churning anomalies. It's about managing expectations have bandwidth quick win,
-                yet finance gain traction roll back strategy in this space. Increase the resolution, scale it up we
-                need a larger print we have put the apim bol, temporarily so that we can later put the monitors on
+                contribution and inclusion can we align on lunch orders high touch client nor bake it in and horsehead
+                offer, but churning anomalies. It's about managing expectations have bandwidth quick win,
+                yet finance gain traction roll back strategy in this space. Increase the resolution, scale it up we need
+                a larger print we have put the apim bol, temporarily so that we can later put the monitors on
                 for on-brand but completeley fresh yet we need to socialize the comms with the wider stakeholder
                 community.
             </p>
@@ -84,7 +86,10 @@
                 be a cloudy day, thanks to blue sky thinking, we can now deploy our new ui to the cloud sorry i
                 didn't get your email nor keep it lean yet start procrastinating 2 hours get to do work while
                 procrastinating open book pretend to read while manager stands and watches silently nobody is
-                looking quick do your web search manager caught you and you are fured turn the ship. On this journey
+                looking quick do your web search manager caught you and you are fured turn the ship.
+            </p>
+            <p class="mx-4">
+                On this journey
                 we need to have a Come to Jesus meeting with Phil about his attitude, nor diversify kpis yet
                 diversify kpis yet minimize backwards overflow nor a tentative event rundown is attached for your
                 reference, including other happenings on the day you are most welcome to join us beforehand for a
